Added /admin/add_team /admin/add_player and modified gitignore os it ignores notebooks
